--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@
     <div class="accordion">
       <div class="accordion-header" onclick="toggleAccordion(this)">Дървени Щори<span class="novo-badge">ново</span></div>
       <div class="accordion-content">
-        <img src="https://i.imgur.com/1lXGP5i.jpg" alt="Дървени Щори Банер" class="product-banner">
+        <img src="https://i.imgur.com/zKPBvHj.jpg" alt="Дървени Щори Банер" class="product-banner">
         <div class="calculator">
           <h3>Калкулатор за Дървени Щори</h3>
           <div class="calc-input">
